# django-tgb-basics

./: README.md  setup.cfg
django-tgb-basics/: backends.py  models.py  viewsets.py
django-tgb-basics/soft_deletion/: managers.py  querysets.py
django_tgb_basics/: models.py  permissions.py  validators.py
django_tgb_basics/drf/: pagination.py
django_tgb_basics/soft_deletion/: models.py
docs/: conf.py  index.rst
