[metadata]
name = django_tgb_basics
version = 0.2.9
description = Basic fundamentals features for Django projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tonybolanyo/django-tgb-basics
author = Tony G. Bolaño
author_email = tonybolanyo@gmail.com
license = MIT
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

